src/test/borrowck/borrowck_block_lifetime.sq
// ignore

fn main() {
    let a: &i32;
    {
        let b: i32 = 5;
        a = &b;
    }
    print_int(*a);
}
